--- a/books.html
+++ b/books.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 
 <html lang="en">
-  <head>
+
+<head>
     <!-- Meta Tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -12,21 +13,13 @@
     <link href="css/main.css" rel="stylesheet" />
 
     <!-- Bootstrap Core CSS -->
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-      integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
-      crossorigin="anonymous"
-    />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous" />
 
     <!--FontAwesome-->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
-  </head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+</head>
 
-  <body>
+<body>
     <!-- Top Navigation Menu -->
     <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container">
@@ -186,13 +179,13 @@
                     type="button"
                     class="btn btn-secondary card-link-secondary small text-uppercase"
                     ><i class="fas fa-heart mr-1"></i> Move to wish list
-                  </a>
-                </div>
-              </div>
+                        </a>
             </div>
-            <!-- End of Card-Deck -->
-          </div>
-          <!-- End of First Row's Book Display -->
+        </div>
+        </div>
+        <!-- End of Card-Deck -->
+        </div>
+        <!-- End of First Row's Book Display -->
 
 
         <br />
@@ -201,17 +194,12 @@
 
             <h3 class="book-display-title">Database Essentials</h3>
             <div class="card-deck">
-              <div class="card">
-                <img
-                  src="images/Database_Management_System.jpg"
-                  class="card-img-top"
-                  alt="Database_Management_System"
-                />
-                <div class="card-body">
-                  <h6 class="card-title">Database Management System</h6>
-                  <p class="card-text">$25</p>
-                  <a href="#" id="add-btn-4" class="btn btn-primary"
-                    >Add to Cart</a
+                <div class="card">
+                    <img src="images/Database_Management_System.jpg" class="card-img-top" alt="Database_Management_System" />
+                    <div class="card-body">
+                        <h6 class="card-title">Database Management System</h6>
+                        <p class="card-text">$25</p>
+                        <a href="#" id="add-btn-4" class="btn btn-primary">Add to Cart</a
                   >
                 </div>
               </div>
@@ -265,45 +253,42 @@
           <h5>About Us</h5>
           <ul>
             <li><a href="#">Who We Are</a></li>
-            <li><a href="#">Our Store</a></li>
-            <li><a href="#">Stores Near to Me</a></li>
-          </ul>
-        </div>
-        <!--End of the First Footer Column-->
+                        <li><a href="#">Our Store</a></li>
+                        <li><a href="#">Stores Near to Me</a></li>
+                        </ul>
+                    </div>
+                    <!--End of the First Footer Column-->
 
-        <div class="cart-footer">
-          <h5>Customer Care</h5>
-          <ul>
-            <li><a href="#">Gift Cards</a></li>
-            <li><a href="#">Ordering</a></li>
-            <li><a href="#">Payment</a></li>
-            <li><a href="#">Shipping</a></li>
-            <li><a href="#">Returns</a></li>
-          </ul>
-        </div>
-        <!--End of the Second Footer Column-->
+                    <div class="cart-footer">
+                        <h5>Customer Care</h5>
+                        <ul>
+                            <li><a href="#">Gift Cards</a></li>
+                            <li><a href="#">Ordering</a></li>
+                            <li><a href="#">Payment</a></li>
+                            <li><a href="#">Shipping</a></li>
+                            <li><a href="#">Returns</a></li>
+                        </ul>
+                    </div>
+                    <!--End of the Second Footer Column-->
 
-        <div class="social-footer">
-          <h5>Follow us</h5>
-          <a href="#"
-            ><i class="fa fa-facebook-square" style="font-size: 30px"></i
+                    <div class="social-footer">
+                        <h5>Follow us</h5>
+                        <a href="#"><i class="fa fa-facebook-square" style="font-size: 30px"></i
           ></a>
-          <a href="#"
-            ><i class="fa fa-linkedin-square" style="font-size: 30px"></i
+                        <a href="#"><i class="fa fa-linkedin-square" style="font-size: 30px"></i
           ></a>
-          <a href="#"
-            ><i class="fa fa-twitter-square" style="font-size: 30px"></i
+                        <a href="#"><i class="fa fa-twitter-square" style="font-size: 30px"></i
           ></a>
-        </div>
-        <!--End of the Third Footer Column-->
+                    </div>
+                    <!--End of the Third Footer Column-->
 
 
-                <div class="contact-us-footer">
-                    <ul class="contact">
-                        <h5>Contact Us</h5>
-                        <li><a href="#"><i class="fa fa-envelope" style="font-size: 30px"></i></a>
-                    </li>
-                    <li><a href="#"><i class="fa fa-phone" style="font-size: 30px"></i></a
+                    <div class="contact-us-footer">
+                        <ul class="contact">
+                            <h5>Contact Us</h5>
+                            <li><a href="#"><i class="fa fa-envelope" style="font-size: 30px"></i></a>
+                            </li>
+                            <li><a href="#"><i class="fa fa-phone" style="font-size: 30px"></i></a
 
             ></li>
             <li
@@ -334,24 +319,25 @@
         <p class="m-0 text-center text-white"
           >Copyright &copy; <a href="index.html">WalkaBooks 2020</a> <br />
 
-                        <a href="#">Terms & Conditions</a> | <a href="#">Privacy Policy </a> |
-                        <a href="#"> Site Map</a> |
-                        <a href="credits.html">Photo Credits</a></p>
-            </div>
-            <!-- End of Copyright -->
-            </footer>
-            <!-- End of Footer -->
+                                <a href="#">Terms & Conditions</a> | <a href="#">Privacy Policy </a> |
+                                <a href="#"> Site Map</a> |
+                                <a href="credits.html">Photo Credits</a></p>
+                    </div>
+                    <!-- End of Copyright -->
+                    </footer>
+                    <!-- End of Footer -->
 
-            <!--Customized JS -->
-            <script src="js/script.js" async defer></script>
-            <!--jQuery, Popper.js, and Bootstrap JS -->
-            <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-            <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-            <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
+                    <!--Customized JS -->
+                    <script src="js/script.js" async defer></script>
+                    <!--jQuery, Popper.js, and Bootstrap JS -->
+                    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+                    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+                    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
 </body>
 
 
-    <!--Customized JS -->
-    <script src="js/script.js" async defer></script>
-  </body>
+<!--Customized JS -->
+<script src="js/script.js" async defer></script>
+</body>
+
 </html>
