banner updated on books page

--- a/books.html
+++ b/books.html
@@ -92,13 +92,12 @@
       </div>
     </nav>
 
-    <br />
-
     <main role="main" class="container">
       <!-- Banner -->
-      <div class="banner">
-        <img src="images/banner.jpg" />
-      </div>
+      <div class="banner-wrap col-md-12 col-sm-12 pl-0 pr-0">
+        <img src="images/banner.jpg" class="rounded w-100" alt="Book banner">
+       </div>
+
 
       <!-- Search Bar for Books -->
       <div class="row mt-5 text-center">
