Follow us icons aligned

--- a/books.html
+++ b/books.html
@@ -337,16 +337,13 @@
 
         <div class="social-footer">
           <h5>Follow us</h5>
-          <a href="#"
-            ><i class="fa fa-facebook-square" style="font-size: 30px"></i
-          ></a>
-          <a href="#"
-            ><i class="fa fa-linkedin-square" style="font-size: 30px"></i
-          ></a>
-          <a href="#"
-            ><i class="fa fa-twitter-square" style="font-size: 30px"></i
-          ></a>
-        </div>
+          <ul>
+          <li><a href="#"><i class="fa fa-facebook-square" style="font-size:30px"></i></a></li>
+                  <li><a href="#"><i class="fa fa-linkedin-square" style="font-size:30px"></i></a></li>
+                 <li> <a href="#"><i class="fa fa-twitter-square" style="font-size:30px"></i></a></li>
+              </ul>
+
+      </div>
         <!--End of the Third Footer Column-->
 
         <div class="contact-us-footer">
