--- a/check-out.html
+++ b/check-out.html
@@ -346,9 +346,11 @@
 
             <div class="social-footer">
                 <h5>Follow us</h5>
-                <a href="#"><i class="fa fa-facebook-square" style="font-size:30px"></i></a>
-                        <a href="#"><i class="fa fa-linkedin-square" style="font-size:30px"></i></a>
-                        <a href="#"><i class="fa fa-twitter-square" style="font-size:30px"></i></a>
+                <ul>
+                <li><a href="#"><i class="fa fa-facebook-square" style="font-size:30px"></i></a></li>
+                        <li><a href="#"><i class="fa fa-linkedin-square" style="font-size:30px"></i></a></li>
+                       <li> <a href="#"><i class="fa fa-twitter-square" style="font-size:30px"></i></a></li>
+                    </ul>
 
             </div>
             <!--End of the Third Footer Column-->
