--- a/contact-us.html
+++ b/contact-us.html
@@ -142,17 +142,14 @@
         <!--End of the Second Footer Column-->
 
         <div class="social-footer">
-          <h5>Follow Us</h5>
-          <a href="#"
-            ><i class="fa fa-facebook-square" style="font-size: 30px"></i
-          ></a>
-          <a href="#"
-            ><i class="fa fa-linkedin-square" style="font-size: 30px"></i
-          ></a>
-          <a href="#"
-            ><i class="fa fa-twitter-square" style="font-size: 30px"></i
-          ></a>
-        </div>
+          <h5>Follow us</h5>
+          <ul>
+          <li><a href="#"><i class="fa fa-facebook-square" style="font-size:30px"></i></a></li>
+                  <li><a href="#"><i class="fa fa-linkedin-square" style="font-size:30px"></i></a></li>
+                 <li> <a href="#"><i class="fa fa-twitter-square" style="font-size:30px"></i></a></li>
+              </ul>
+
+      </div>
         <!--End of the Third Footer Column-->
 
         <div class="contact-us-footer">
