--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <img src="images/banner.jpg" class="rounded w-100" alt="Book banner"> 
       </div>
       <!-- Jumbotron Header -->
-      <header class="jumbotron" style="height:100px;">
+      <header class="jumbotron py-2" style="height:100px;">
         <div class="container">    
         <h2 class="display-5 text-center">Shape Your Ideas!</h2>
         <p class="lead text-center"
