Search bar and toggle menu adjusted

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <img src="images/banner.jpg" class="rounded w-100" alt="Book banner"> 
       </div>
       <!-- Jumbotron Header -->
-      <header class="jumbotron py-2" style="height:100px;">
+      <header class="jumbotron py-2">
         <div class="container">    
         <h2 class="display-5 text-center">Shape Your Ideas!</h2>
         <p class="lead text-center"
@@ -79,11 +79,11 @@
       </header>
 
       <div class="search-bar">
-        <form class="form-inline">
+        <form class="form-inline" style="justify-content: center;">
           <div>
-            <h5>Search Books</h5>
+            <h5 style="padding-top: 5px;">Search Books</h5>
           </div>
-          <div class="input-group">
+          <div class="input-group" style="padding-left: 10px;">
             <input
               type="text"
               class="form-control"
