--- a/books.html
+++ b/books.html
@@ -19,22 +19,7 @@
       crossorigin="anonymous"
     />
 
-    <!--jQuery, Popper.js, and Bootstrap JS -->
-    <script
-      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-      integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
-      integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
-      crossorigin="anonymous"
-    ></script>
+  
 
     <!--FontAwesome-->
     <link
@@ -100,26 +85,24 @@
 
 
       <!-- Search Bar for Books -->
-      <div class="row mt-5 text-center">
-        <div class="search-bar text-center">
-          <form class="form-inline">
-            <div>
-              <h5>Search Books</h5>
+      <div class="search-bar">
+        <form class="form-inline" style="justify-content: center;">
+          <div>
+            <h5 style="padding-top: 5px;">Search Books</h5>
+          </div>
+          <div class="input-group" style="padding-left: 10px;">
+            <input
+              type="text"
+              class="form-control"
+              placeholder="Search"
+              aria-label="Search"
+              aria-describedby="basic-addon1"
+            />
+            <div class="input-group-prepend">
+              <span class="input-group-text" id="basic-addon1">Go!</span>
             </div>
-            <div class="input-group">
-              <input
-                type="text"
-                class="form-control"
-                placeholder="Search"
-                aria-label="Search"
-                aria-describedby="basic-addon1"
-              />
-              <div class="input-group-prepend">
-                <span class="input-group-text" id="basic-addon1">Go!</span>
-              </div>
-            </div>
-          </form>
-        </div>
+          </div>
+        </form>
       </div>
       <!-- End of Search Bar for Books -->
 
@@ -395,5 +378,21 @@
 
     <!--Customized JS -->
     <script src="js/script.js" async defer></script>
+      <!--jQuery, Popper.js, and Bootstrap JS -->
+      <script
+      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+      integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
+      integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
