added cart icon to all pages

--- a/credits.html
+++ b/credits.html
@@ -51,7 +51,7 @@
                     <li class="nav-item">
                         <a class="nav-link" href="cart.html">
                             <i class="fa fa-shopping-cart" style="font-size: 32px"></i
-                  ></a>
+                  ><span id="cart-icon-count">0</span></a>
                 </li>
               </ul>
             </div>
