--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 
 <html lang="en">
-
-<head>
+  <head>
     <!-- Meta Tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -12,51 +11,80 @@
     <link href="css/main.css" rel="stylesheet" />
 
     <!-- Bootstrap Core CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+      integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
+      crossorigin="anonymous"
+    />
 
     <!--jQuery, Popper.js, and Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+      integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
+      integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
+      crossorigin="anonymous"
+    ></script>
 
     <!--FontAwesome-->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
-</head>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+  </head>
 
-<body>
-
+  <body>
     <!-- Top Navigation Menu -->
     <nav class="navbar navbar-expand-lg navbar-dark">
-        <div class="container">
-            <a class="navbar-brand" href="index.html">WALKABOOKS</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+      <div class="container">
+        <a class="navbar-brand" href="index.html">WALKABOOKS</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarResponsive"
+          aria-controls="navbarResponsive"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
           <span class="navbar-toggler-icon"></span>
         </button>
-            <div class="collapse navbar-collapse" id="navbarResponsive">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="index.html">Home
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="index.html"
+                >Home
                 <span class="sr-only">(current)</span>
               </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="books.html">Books</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="about-us.html">About Us</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="contact-us.html">Contact Us</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="registration.html">
-                            <i class="fa fa-user-circle" style="font-size: 32px"></i>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="cart.html">
-                            <i class="fa fa-shopping-cart" style="font-size: 32px"></i
-              ></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="books.html">Books</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="about-us.html">About Us</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contact-us.html">Contact Us</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="registration.html">
+                <i class="fa fa-user-circle" style="font-size: 32px"></i>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="cart.html">
+                <i class="fa fa-shopping-cart" style="font-size: 32px"></i
+                ><span id="cart-icon-count">0</span></a
+              >
             </li>
           </ul>
         </div>
@@ -67,14 +95,15 @@
     <div class="container">
       <!-- Banner -->
       <div class="banner-wrap col-md-12 col-sm-12 pl-0 pr-0">
-        <img src="images/banner.jpg" class="rounded w-100" alt="Book banner"> 
+        <img src="images/banner.jpg" class="rounded w-100" alt="Book banner" />
       </div>
       <!-- Jumbotron Header -->
-      <header class="jumbotron" style="height:100px;">
-        <div class="container">    
-        <h2 class="display-5 text-center">Shape Your Ideas!</h2>
-        <p class="lead text-center"
-          >Your one-stop shop of full-stack development resources</p>
+      <header class="jumbotron" style="height: 100px">
+        <div class="container">
+          <h2 class="display-5 text-center">Shape Your Ideas!</h2>
+          <p class="lead text-center"
+            >Your one-stop shop of full-stack development resources</p
+          >
         </div>
       </header>
 
@@ -135,7 +164,8 @@
             <div class="card-body">
               <h4 class="card-title">Front End Developer</h4>
               <p class="card-text"
-                >This book will make you the principal Front End Developer domain leader</p
+                >This book will make you the principal Front End Developer
+                domain leader</p
               >
             </div>
             <div class="card-footer">
@@ -155,7 +185,8 @@
             <div class="card-body">
               <h4 class="card-title">Front End Development</h4>
               <p class="card-text"
-                >The professional's guide to fast, responsive web development.</p
+                >The professional's guide to fast, responsive web
+                development.</p
               >
             </div>
             <div class="card-footer">
@@ -175,7 +206,8 @@
             <div class="card-body">
               <h4 class="card-title">Professional Front End Architecture</h4>
               <p class="card-text"
-                >Offers a curated list of foundational principles selected explicitly for front-end architecture.</p
+                >Offers a curated list of foundational principles selected
+                explicitly for front-end architecture.</p
               >
             </div>
             <div class="card-footer">
@@ -232,9 +264,12 @@
             <h5>Contact Us</h5>
             <li
               ><a href="#"
-                ><i class="fa fa-envelope" style="font-size: 30px"></i></a>
-                    </li>
-                    <li><a href="#"><i class="fa fa-phone" style="font-size: 30px"></i></a
+                ><i class="fa fa-envelope" style="font-size: 30px"></i
+              ></a>
+            </li>
+            <li
+              ><a href="#"
+                ><i class="fa fa-phone" style="font-size: 30px"></i></a
             ></li>
             <li
               ><a href="#"
@@ -263,15 +298,15 @@
       <div class="copyright">
         <p class="m-0 text-center text-white"
           >Copyright &copy; <a href="index.html">WalkaBooks 2020</a> <br />
-                        <a href="#">Terms & Conditions</a> | <a href="#">Privacy Policy </a> |
-                        <a href="#"> Site Map </a> |
-                        <a href="credits.html">Photo Credits</a></p>
-            </div>
-            <!-- End of Copyright -->
-            </footer>
-            <!-- End of Footer -->
+          <a href="#">Terms & Conditions</a> | <a href="#">Privacy Policy </a> |
+          <a href="#"> Site Map </a> |
+          <a href="credits.html">Photo Credits</a></p
+        >
+      </div>
+      <!-- End of Copyright -->
+    </footer>
+    <!-- End of Footer -->
 
-            <script src="js/script.js" async defer></script>
-</body>
-
+    <script src="js/script.js" async defer></script>
+  </body>
 </html>
