--- a/books.html
+++ b/books.html
@@ -61,7 +61,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
-            <li class="nav-item ">
+            <li class="nav-item">
               <a class="nav-link" href="index.html"
                 >Home
                 <span class="sr-only">(current)</span>
@@ -203,7 +203,7 @@
                 <img
                   src="images/Javascript_for_Beginners.jpg"
                   class="card-img-top"
-                  alt="Front-End Database"
+                  alt="Javascript_for_Beginners"
                 />
                 <div class="card-body">
                   <h6 class="card-title">Javascript for Beginners</h6>
