footer ans search bar updated

--- a/credits.html
+++ b/credits.html
@@ -63,21 +63,27 @@
     <div class="container">
 
         <!-- Banner -->
-      2
 
         <div class="search-bar">
-            <form class="form-inline">
-                <div>
-                    <h5>Search Books</h5>
+            <form class="form-inline" style="justify-content: center;">
+              <div>
+                <h5 style="padding-top: 5px;">Search Books</h5>
+              </div>
+              <div class="input-group" style="padding-left: 10px;">
+                <input
+                  type="text"
+                  class="form-control"
+                  placeholder="Search"
+                  aria-label="Search"
+                  aria-describedby="basic-addon1"
+                />
+                <div class="input-group-prepend">
+                  <span class="input-group-text" id="basic-addon1">Go!</span>
                 </div>
-                <div class="input-group">
-                    <input type="text" class="form-control" placeholder="Search" aria-label="Search" aria-describedby="basic-addon1">
-                    <div class="input-group-prepend">
-                        <span class="input-group-text" id="basic-addon1">Go!</span>
-                    </div>
-                </div>
+              </div>
             </form>
-        </div>
+          </div>
+
 
         <div class="photo-credits">
             <!--Photo Reference for Home Page -->
