--- a/credits.html
+++ b/credits.html
@@ -65,7 +65,7 @@
         <!-- Banner -->
 
         <div class="search-bar">
-            <form class="form-inline" style="justify-content: center;">
+            <form class="form-inline" style="justify-content: center; background-color: #d8dce4">
               <div>
                 <h5 style="padding-top: 5px;">Search Books</h5>
               </div>
