--- a/about-us.html
+++ b/about-us.html
@@ -104,18 +104,15 @@
       <h2>About Us</h2>
       <br />
       <div class="row">
-        <div class="col-md-8 col-sm-12">
-          <p
-            >WalkaBooks is an online marketplace for books, Trusted independent
+        <div class="col-md-8 col-sm-12 text-justify">
+          <p>WalkaBooks is an online marketplace for books, Trusted independent
             sellers from around the world offer for sale millions of new, used
             software development books. Lorem ipsum dolor sit amet consectetur,
             adipisicing elit. Sapiente error maiores nihil, at accusantium
             dolore consequatur molestiae sit magni delectus eaque tempora quo
-            vitae eligendi earum, quis quos, illum tempore.</p
-          >
+            vitae eligendi earum, quis quos, illum tempore.</p>
 
-          <p
-            >Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt ipsa
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt ipsa
             voluptatum veritatis maiores, culpa nam molestias, rerum obcaecati
             alias facere veniam ex repellendus asperiores minima totam a
             provident aspernatur magnam?
