--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         <img src="images/banner.jpg" class="rounded w-100" alt="Book banner" />
       </div>
       <!-- Jumbotron Header -->
-      <header class="jumbotron py-2">
+      <header class="jumbotron py-2" style="background-color: #d8dce4">
         <div class="container">    
         <h2 class="display-5 text-center">Shape Your Ideas!</h2>
         <p class="lead text-center"
@@ -107,7 +107,7 @@
       </header>
 
       <div class="search-bar">
-        <form class="form-inline" style="justify-content: center;">
+        <form class="form-inline" style="justify-content: center; background-color: #d8dce4; border-radius: 5px;">
           <div>
             <h5 style="padding-top: 5px;">Search Books</h5>
           </div>
