--- a/registration.html
+++ b/registration.html
@@ -71,17 +71,17 @@
         <div class="col-md-6 col-sm-12 ">
             <h2 class="font-weight-bold ">Register</h2>
 
-            <form class="p-top-2 " action=" " name="registration ">
+            <form class="p-top-2 " action=" " name="registration " style="padding:20px">
                 <div class="form-group row ">
-                    <label for="inputFirstName " class="col-md-4 col-sm-12 col-form-label ">First Name</label>
+                    <label for="inputFirstName " class="col-md-4 col-sm-4 col-form-label ">First Name</label>
                     <div class="col-sm-8 ">
                         <input type="text " class="form-control " id="inputFirstName " placeholder="Enter your First Name " />
                     </div>
                 </div>
                 <div class="form-group row ">
-                    <label for="inputLastName " class="col-sm-2 col-form-label ">Last Name</label
+                    <label for="inputLastName " class="col-sm-4 col-form-label ">Last Name</label
             >
-            <div class="col-sm-10 ">
+            <div class="col-sm-8 ">
               <input
                 type="text "
                 class="form-control "
@@ -91,10 +91,10 @@
             </div>
           </div>
           <div class="form-group row ">
-            <label for="inputEmail " class="col-sm-2 col-form-label "
+            <label for="inputEmail " class="col-sm-4 col-form-label "
               >Email</label
             >
-            <div class="col-sm-10 ">
+            <div class="col-sm-8 ">
               <input
                 type="email "
                 class="form-control "
@@ -104,10 +104,10 @@
             </div>
           </div>
           <div class="form-group row ">
-            <label for="inputUser " class="col-sm-2 col-form-label "
+            <label for="inputUser " class="col-sm-4 col-form-label "
               >Username</label
             >
-            <div class="col-sm-10 ">
+            <div class="col-sm-8 ">
               <input
                 type="password "
                 class="form-control "
@@ -117,10 +117,10 @@
             </div>
           </div>
           <div class="form-group row ">
-            <label for="inputPassword " class="col-sm-2 col-form-label "
+            <label for="inputPassword " class="col-sm-4 col-form-label "
               >Password</label
             >
-            <div class="col-sm-10 ">
+            <div class="col-sm-8 ">
               <input
                 type="password "
                 class="form-control "
@@ -130,10 +130,10 @@
             </div>
           </div>
           <div class="form-group row ">
-            <label for="inputConfirmPassword " class="col-sm-2 col-form-label "
+            <label for="inputConfirmPassword " class="col-sm-4 col-form-label "
               >Password</label
             >
-            <div class="col-sm-10 ">
+            <div class="col-sm-8 ">
               <input
                 type="password "
                 class="form-control "
@@ -161,10 +161,10 @@
           <h2 class="font-weight-bold ">Log In</h2>
           <form>
             <div class="form-group row ">
-              <label for="inputUser " class="col-sm-2 col-form-label "
+              <label for="inputUser " class="col-sm-4 col-form-label "
                 >Username</label
               >
-              <div class="col-sm-10 ">
+              <div class="col-sm-8 ">
                 <input
                   type="text "
                   class="form-control "
@@ -174,10 +174,10 @@
               </div>
             </div>
             <div class="form-group row ">
-              <label for="inputPassword " class="col-sm-2 col-form-label "
+              <label for="inputPassword " class="col-sm-4 col-form-label "
                 >Password</label
               >
-              <div class="col-sm-10 ">
+              <div class="col-sm-8 ">
                 <input
                   type="password "
                   class="form-control "
