--- a/cart.html
+++ b/cart.html
@@ -423,7 +423,8 @@
                         </li>
                     </ul>
 
-                    <button type="button" class="btn btn-primary btn-block">go to checkout</button>
+                    <a href="check-out.html" style="text-decoration: none;"><button type="button"  class="btn btn-primary btn-block">go to checkout</button></a>
+                    
 
                 </div>
             </div>
