--- a/contact-us.html
+++ b/contact-us.html
@@ -82,7 +82,7 @@
       </div>
 
       <!--contact-us form-->
-      <h2>Contact Us</h2>
+      <h3 style="padding-top: 30px;">Contact Us</h3>
 
       <form>
         <div class="form-group row">
