--- a/registration.html
+++ b/registration.html
@@ -28,7 +28,7 @@
           </button>
             <div class="collapse navbar-collapse " id="navbarResponsive ">
                 <ul class="navbar-nav ml-auto ">
-                    <li class="nav-item active ">
+                    <li class="nav-item ">
                         <a class="nav-link " href="index.html ">Home
                   <span class="sr-only ">(current)</span>
                 </a>
@@ -42,7 +42,7 @@
                     <li class="nav-item ">
                         <a class="nav-link " href="contact-us.html ">Contact Us</a>
                     </li>
-                    <li class="nav-item ">
+                    <li class="nav-item active">
                         <a class="nav-link " href="registration.html ">
                             <i class="fa fa-user-circle " style="font-size: 32px "></i>
                         </a>
@@ -68,8 +68,8 @@
 
         <!--Register form-->
         <!---------------------------------------------------------------------------------------------->
-        <div class="col-md-6 col-sm-12 ">
-            <h2 class="font-weight-bold ">Register</h2>
+        <div class="col-lg-6 col-sm-12 ">
+            <h3 class="font-weight-bold " style="padding-top: 30px;">Register</h3>
 
             <form class="p-top-2 " action=" " name="registration " style="padding:20px">
                 <div class="form-group row ">
@@ -155,11 +155,10 @@
       <!---------------------------------------------------------------------------------------------->
 
       <div
-        class="aside col-md-6 col-sm-12 py-5 "
-      >
+        class="aside col-lg-6 col-sm-12 py-5 ">
         <div class = "login-form py-5 ">
-          <h2 class="font-weight-bold ">Log In</h2>
-          <form>
+          <h3 class="font-weight-bold " style="padding-top: 30px;">Log In</h3>
+          <form style="padding:20px">
             <div class="form-group row ">
               <label for="inputUser " class="col-sm-4 col-form-label "
                 >Username</label
