--- a/books.html
+++ b/books.html
@@ -86,7 +86,7 @@
 
       <!-- Search Bar for Books -->
       <div class="search-bar">
-        <form class="form-inline" style="justify-content: center; background-color: #d8dce4">
+        <form class="form-inline" style="justify-content: center; background-color: #d8dce4;">
           <div>
             <h5 style="padding-top: 5px;">Search Books</h5>
           </div>
@@ -109,7 +109,7 @@
       <br />
 
       <div class="row">
-        <aside class="col-md-4 book-sidebar text-white rounded" style="background-color: #5a7591;">
+        <aside class="col-md-4 book-sidebar text-white rounded" style="background-color: #8a9db6">
           <h3 class="text-center" style="margin-top: 10px;">Select Sections</h3>
   
             <div style="width: 80%; padding-left: 20%; margin-top: 20px;">
@@ -125,14 +125,13 @@
             </div>
           
           <div class="p-4 mb-3 mt-3">
-            <h4>For Beginners</h4>
-            <p class="mb-0"
-              >Etiam porta <em>sem malesuada magna</em> mollis euismod. Cras
+            <h4 class="text-center">For Beginners</h4>
+            <p class="mb-0 text-justify" >Etiam porta <em>sem malesuada magna</em> mollis euismod. Cras
               mattis consectetur purus sit amet fermentum. Aenean lacinia
               bibendum nulla sed consectetur.</p
             >
             <br />
-            <p class="mb-0"
+            <p class="mb-0 text-justify"
               >Etiam porta <em>sem malesuada magna</em> mollis euismod. Cras
               mattis consectetur purus sit amet fermentum. Aenean lacinia
               bibendum nulla sed consectetur.</p
@@ -140,14 +139,14 @@
           </div>
 
           <div class="p-4">
-            <h4>Database Essentials</h4>
-            <p class="mb-0"
+            <h4 class="text-center">Database Essentials</h4>
+            <p class="mb-0 text-justify"
               >Etiam porta <em>sem malesuada magna</em> mollis euismod. Cras
               mattis consectetur purus sit amet fermentum. Aenean lacinia
               bibendum nulla sed consectetur.</p
             >
             <br />
-            <p class="mb-0"
+            <p class="mb-0 text-justify"
               >Etiam porta <em>sem malesuada magna</em> mollis euismod. Cras
               mattis consectetur purus sit amet fermentum. Aenean lacinia
               bibendum nulla sed consectetur.</p
@@ -159,7 +158,7 @@
         <!-- Book Display Rows-->
         <div class="col-md-8 book-main">
           <div class="book-display">
-            <h3 class="book-display-title">For Beginners</h3>
+            <h2 class="book-display-title">For Beginners</h2>
 
             <div class="card-deck">
               <div class="card">
@@ -220,7 +219,7 @@
           <br />
 
           <div class="book-display">
-            <h3 class="book-display-title">Database Essentials</h3>
+            <h2 class="book-display-title">Database Essentials</h2>
             <div class="card-deck">
               <div class="card">
                 <img
