--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         <img src="images/banner.jpg" class="rounded w-100" alt="Book banner" />
       </div>
       <!-- Jumbotron Header -->
-      <header class="jumbotron py-2" style="background-color: #d8dce4">
+      <header class="jumbotron py-2" style="background-color: #d8dce4;">
         <div class="container">    
         <h2 class="display-5 text-center">Shape Your Ideas!</h2>
         <p class="lead text-center"
