--- a/cart.html
+++ b/cart.html
@@ -68,6 +68,10 @@
                 <!--Grid column-->
                 <div class="cart col-lg-8 sm-12">
 
+                <div class="cart-container">
+
+                </div>
+
                     <!-- Cart Item 1 -->
                     <div class="mt-3">
                         <div class="pt-4 wish-list">
@@ -84,7 +88,7 @@
                                     <div>
                                         <div class="d-flex justify-content-between">
                                             <div>
-                                                <h5>Coding for Beginners</h5>
+                                                <h5 id="Book1Title"></h5>
                                                 <p class="mb-3 text-muted text-uppercase small">Front End - Book</p>
                                                 <p class="mb-2 text-muted text-uppercase small">Order By</p>
                                             </div>
