--- a/books.html
+++ b/books.html
@@ -130,25 +130,15 @@
                             <div class="card-body">
                                 <h6 class="card-title">Coding for Beginners</h6>
                                 <p class="card-text">$25</p>
-                                <a href="#" type="button" id="add-btn-1" class="btn btn-primary">Add to Cart</a
-                  >
-                </div>
-              </div>
-              <div class="card">
-                <img
-                  src="images/Javascript_for_Beginners.jpg"
-                  class="card-img-top"
-                  alt="Front-End Database"
-                />
-                <div class="card-body">
-                  <h6 class="card-title">Javascript for Beginners</h6>
-                  <p class="card-text">$30</p>
-                  <a
-                    href="#"
-                    type="button"
-                    id="add-btn-2"
-                    class="btn btn-primary"
-                    >Add to Cart</a
+                                <button href="#" type="button" id="add-btn-1" class="bookcart btn btn-primary">Add to Cart</button>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <img src="images/Javascript_for_Beginners.jpg" class="card-img-top" alt="Front-End Database" />
+                            <div class="card-body">
+                                <h6 class="card-title">Javascript for Beginners</h6>
+                                <p class="card-text">$30</p>
+                                <a href="#" type="button" id="add-btn-2" class="bookcart btn btn-primary">Add to Cart</a
                   >
                 </div>
               </div>
@@ -161,7 +151,7 @@
                 <div class="card-body">
                   <h6 class="card-title">SQL Programming For Beginners</h6>
                   <p class="card-text">$25</p>
-                  <a href="#" id="add-btn-3" class="btn btn-primary"
+                  <a href="#" id="add-btn-3" class="bookcart btn btn-primary"
                     >Add to Cart</a
                   >
                 </div>
@@ -185,7 +175,7 @@
                 <div class="card-body">
                   <h6 class="card-title">Database Management System</h6>
                   <p class="card-text">$25</p>
-                  <a href="#" id="add-btn-4" class="btn btn-primary"
+                  <a href="#" id="add-btn-4" class="bookcart btn btn-primary"
                     >Add to Cart</a
                   >
                 </div>
@@ -199,7 +189,7 @@
                 <div class="card-body">
                   <h6 class="card-title">SQL Database Programming</h6>
                   <p class="card-text">$30</p>
-                  <a href="#" id="add-btn-5" class="btn btn-primary"
+                  <a href="#" id="add-btn-5" class="bookcart btn btn-primary"
                     >Add to Cart</a
                   >
                 </div>
@@ -215,7 +205,7 @@
                     >Essential of Web Database Development</h6
                   >
                   <p class="card-text">$25</p>
-                  <a href="#" id="add-btn-6" class="btn btn-primary"
+                  <a href="#" id="add-btn-6" class="bookcart btn btn-primary"
                     >Add to Cart</a
                   >
                 </div>
@@ -315,14 +305,10 @@
 
                             <!--Customized JS -->
                             <script src="js/script.js" async defer></script>
-</body>
-
-<!--Customized JS -->
-<script src="js/script.js" async defer></script>
-<!--jQuery, Popper.js, and Bootstrap JS -->
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
+                            <!--jQuery, Popper.js, and Bootstrap JS -->
+                            <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+                            <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+                            <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
 </body>
 
 </html>
