Image type changed

--- a/books.html
+++ b/books.html
@@ -133,7 +133,7 @@
               </div>
               <div class="card">
                 <img
-                  src="images/SQL_Programming_For_Beginners.png"
+                  src="images/SQL_Programming_For_Beginners.jpg"
                   class="card-img-top"
                   alt="Front-End Book"
                 />
@@ -183,7 +183,7 @@
               </div>
               <div class="card">
                 <img
-                  src="images/Essentials_of_Web_Database_Development.png"
+                  src="images/Essentials_of_Web_Database_Development.jpg"
                   class="card-img-top"
                   alt="Essentials_of_Web_Database_Development"
                 />
