--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
           <div class="card h-100">
             <img
               class="card-img-top"
-              src="images/Professional_Front_End_Architecture.png"
+              src="images/Professional_Front_End_Architecture.jpg"
               alt="Professional Front End Architecture"
             />
             <div class="card-body">
