--- a/cart.html
+++ b/cart.html
@@ -77,7 +77,7 @@
                     <div class="mt-3">
                         <div class="pt-4 wish-list">
 
-                            <h5 class="mb-4">Cart (<span>2</span> items)</h5>
+                            <!-- <h5 class="mb-4">Cart (<span>2</span> items)</h5> -->
                             <div class="row mb-4 hide-item-1">
                                 <div class="col-md-5 col-lg-3 col-xl-3">
                                     <div class="view zoom overlay z-depth-1 rounded mb-3 mb-md-0">
