login page nav updated

--- a/cart.html
+++ b/cart.html
@@ -173,7 +173,7 @@
                 <div class="row mb-4 hide-item-3">
                     <div class="col-md-5 col-lg-3 col-xl-3">
                         <div class="view zoom overlay z-depth-1 rounded mb-3 mb-md-0">
-                            <img class="img-fluid w-100" src="images/SQL_Programming_For_Beginners.png" alt="SQL_Programming_For_Beginners">
+                            <img class="img-fluid w-100" src="images/SQL_Programming_For_Beginners.jpg" alt="SQL_Programming_For_Beginners">
 
                         </div>
                     </div>
@@ -318,7 +318,7 @@
                 <div class="row mb-4 hide-item-6">
                     <div class="col-md-5 col-lg-3 col-xl-3">
                         <div class="view zoom overlay z-depth-1 rounded mb-3 mb-md-0">
-                            <img class="img-fluid w-100" src="images/Essentials_of_Web_Database_Development.png" alt="Essentials_of_Web_Database_Development">
+                            <img class="img-fluid w-100" src="images/Essentials_of_Web_Database_Development.jpg" alt="Essentials_of_Web_Database_Development">
 
                         </div>
                     </div>
