--- a/cart.html
+++ b/cart.html
@@ -114,12 +114,12 @@
 
                     <ul class="list-group list-group-flush">
                         <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 pb-0">
-                            Temporary amount
-                            <span>$50.00</span>
+                            Sub-Total
+                            <span id="book-Total1">$0.00</span>
                         </li>
                         <li class="list-group-item d-flex justify-content-between align-items-center px-0">
                             Shipping
-                            <span>$5.00</span>
+                            <span>$0.00</span>
                         </li>
                         <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 mb-3">
                             <div>
